--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,5 +1,13 @@
 payload:
+  # Aylo
   - +.trafficjunky.com
   - +.pornhub.com
   - +.etahub.com
   - +.phncdn.com
+  - +.brazzers.com
+  - +.redtube.com
+  - +.youporn.com
+  - +.digitalplayground.com
+  - +.realitykings.com
+  - +.twistys.com
+  - +.mofos.com
