--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,17 @@
 payload:
+  # miss-av
+  - +.missav.ws
+  # Vixen Media Group
+  - +.vixen.com
+  - +.vixenplus.com
+  - +.blackedraw.com
+  - +.tushy.com
+  - +.blacked.com
+  - +.tushyraw.com
+  - +.deeper.com
+  - +.slayed.com
+  - +.milfy.com
+  - +.wifeysworld.com
   # Aylo
   - +.trafficjunky.com
   - +.pornhub.com
@@ -11,3 +24,212 @@ payload:
   - +.realitykings.com
   - +.twistys.com
   - +.mofos.com
+  # 未分类
+  - +.fakings.com
+  - +.mature.nl
+  - +.mylf.com
+  - +.inkasex.com
+  - +.mymember.site
+  - +.auntjudysxxx.com
+  # Public Agent
+  - +.publicagent.com
+  # Family Strokes
+  - +.familystrokes.com
+  # EnjoyX
+  - +.enjoyx.com
+  # Bratty Sis
+  - +.brattyseries.com
+  # BellesaPlus
+  - +.bellesaplus.co
+  # Fakehub
+  - +.fakehub.com
+  - +.faketaxi.com
+  - +.fakehostel.com
+  - +.FakeDrivingSchool.com
+  - +.FemaleFakeTaxi.com
+  # Wow Girls
+  - +.wowgirls.com
+  - +.UltraFilms.com
+  #  hushmoney
+  - +.interracialpass.com
+  - +.hushpass
+  # Porn Plus
+  - +.pornplus.com
+  - +.cum4k.com
+  - +.girlcum.com
+  # Nubiles Porn
+  - +.nubiles-porn.com
+  - +.stepsiblingscaught.com
+  - +.momsteachsex.com
+  - +.badteenspunished.com
+  - +.princesscum.com
+  - +.nubilesunscripted.com
+  - +.nubiles-casting.com
+  - +.nubiles.net
+  - +.petitehdporn.com
+  - +.driverxxx.com
+  - +.petiteballerinasfucked.com
+  - +.teacherfucksteens.com
+  - +.bountyhunterporn.com
+  - +.daddyslilangel.com
+  - +.myfamilypies.com
+  - +.detentiongirls.com
+  - +.nubileset.com
+  - +.familyswap.xxx
+  - +.youngermommy.com
+  - +.cumswappingsis.com
+  - +.smashed.xxx
+  - +.cheatingsis.com
+  - +.caughtmycoach.com
+  - +.realitysis.com
+  # Nubile Films
+  - +.nubilefilms.com
+  - +.nfbusty.com
+  - +.hotcrazymess.com
+  - +.thatsitcomshow.com
+  - +.girlsonlyporn.com
+  # SexyHub
+  - +.sexyhub.com
+  - +.danejones.com
+  - +.lesbea.com
+  - +.momxxx.com
+  - +.massagerooms.com
+  - +.fitnessrooms.com
+  # New Sensations
+  - +.newsensations.com
+  - +.familyxxx.com
+  - +.hotwifexxx.com
+  # TeamSkeet
+  - +.teamskeet.com
+  - +.sislovesme.com
+  - +.familystrokes.com
+  - +.pervmom.com
+  # Bang Bros Network
+  - +.bangbros.com
+  - +.miakhalifa.com
+  - +.BangBus.com
+  - +.MomIsHorny.com
+  - +.MyDirtyMaid.com
+  - +.BangPov.com
+  - +.AssParade.com
+  - +.MonstersOfCock.com
+  - +.BigTitsRoundAsses.com
+  - +.PublicBang.com
+  - +.BrownBunnies.com
+  - +.BangBrosClips.com
+  - +.BangBros18.com
+  - +.BigTitsCreampie.com
+  - +.FuckTeam5.com
+  - +.BackroomFacials.com
+  - +.BigMouthfuls.com
+  - +.PartyOf3.com
+  - +.BackroomMilf.com
+  - +.TugJobs.com
+  - +.Pawg.com
+  - +.StepmomVideos.com
+  - +.MrAnal.com
+  - +.PornStarSpa.com
+  - +.MilfSoup.com
+  - +.DormInvasion.com
+  - +.FacialFest.com
+  - +.MagicalFeet.com
+  - +.LatinaRampage.com
+  - +.CanHeScore.com
+  - +.MyLifeInBrazil.com
+  - +.BlowjobNinjas.com
+  # Pornfidelity
+  - +.pornfidelity.com
+  - +.kellymadison.com
+  - +.5kporn.com
+  - +.5kteens.com
+  - +.teenfidelity.com
+  # Gamma Entertainment
+  - +.puretaboo.com
+  - +.adulttime.com
+  - +.lezbebad.com
+  - +.adulttimeupclose.com
+  - +.agentredgirl.com
+  - +.mommysgirl.com
+  - +.vivid.com
+  - +.futasentaisquad.com
+  - +.fantasymassage.com
+  - +.nurumassage.com
+  - +.allgirlmassage.com
+  - +.soapymassage.com
+  - +.milkingtable.com
+  - +.www.trickyspa.com
+  - +.oopsie.tube
+  - +.transfixed.com
+  - +.girlsway.com
+  - +.heteroflexible.com
+  - +.21sextury.com
+  - +.truelesbian.com
+  - +.accidentalgangbang.com
+  # ThePornGutter
+  - +.porngutter.com
+  - +.jeffsmodels.com
+  - +.dreamtranny.com
+  - +.dothewife.com
+  - +.goldenslut.com
+  - +.teenerotica.xxx
+  - +.suggabunny.com
+  - +.smutmerchants.com
+  # momlover
+  - +.momlover.com
+  - +.brattymilf.com
+  - +.datingmystepson.com
+  - +.cheatingmommy.com
+  - +.momswapped.com
+  - +.momwantstobreed
+  - +.momwantscreampie.com
+  - +.momstight.com
+  - +.momsfamilysecrets.com
+  - +.momsboytoy.com
+  - +.imnotyourmommy.com
+  # LetsDoeIt
+  - +.letsdoeit.com
+  - +.thewhiteboxxx.com
+  - +.herlimit.com
+  - +.agirlknows.com
+  - +.hornyhostel.com
+  - +.relaxxxed.com
+  - +.xxxshades.com
+  - +.doegirls.com
+  - +.questfororgasm.com
+  - +.mynaughtyalbum.com
+  - +.latinamilf.com
+  - +.bumsbuero.com
+  - +.doeprojects.com
+  - +.bumsbesuch.com
+  - +.dirtycosplay.com
+  # mydirtyhobby
+  - +.mydirtyhobby.com
+  # Dancing Bear
+  - +.dancingbear.com
+  # Dogfart Network
+  - +.dogfartnetwork.com
+  # MamacitaZ
+  - +.mamacitaz.com
+  # Futanari
+  - +.futanari.xxx
+  # Cam Soda
+  - +.camsoda.com
+  # Pepe Porn
+  - +.pepeporn.com
+  # Property Sex
+  - +.propertysex.com
+  # Naughty America
+  - +.naughtyamerica.com
+  - +.myfriendshotmom.com
+  # My Pervy Family
+  - +.MyPervyFamily.com
+  # Futanari
+  - +.futanari.xxx
+  # HotGuysFuck
+  - +.HotGuysFuck.com
+  # Ersties
+  - +.ersties.com
+  # Cam Soda
+  - +.camsoda.com
+  # Jav HD
+  - +.JavHD.com
