--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -25,12 +25,16 @@ payload:
   - +.twistys.com
   - +.mofos.com
   # 未分类
+  - +.filthykings.com
+  - +.jayspov.net
+  - +.mamacitaz.com
   - +.fakings.com
   - +.mature.nl
   - +.mylf.com
   - +.inkasex.com
   - +.mymember.site
   - +.auntjudysxxx.com
+  - +.boxofporn.com
   # Public Agent
   - +.publicagent.com
   # Family Strokes
@@ -54,9 +58,42 @@ payload:
   - +.interracialpass.com
   - +.hushpass
   # Porn Plus
+  - +.tiny4k.com
   - +.pornplus.com
   - +.cum4k.com
   - +.girlcum.com
+  - +.povd.com
+  - +.lubed.com
+  - +.passion-hd.com
+  - +.puremature.com
+  - +.bbcpie.com
+  - +.spyfam.com
+  - +.pornpros.com
+  - +.holed.com
+  - +.anal4k.com
+  - +.exotic4k.com
+  - +.facials4k.com
+  - +.nannyspy.com
+  - +.mom4k.com
+  - +.myveryfirsttime.com
+  - +.castingcouch-x.com
+  - +.fantasyhd.com
+  - +.strippers4k.com
+  - +.creepypa.com
+  - +.wetvr.com
+  - +.realexgirlfriends.com
+  - +.massagecreep.com
+  - +.18yearsold.com
+  - +.teenbff.com
+  - +.crueltyparty.com
+  - +.publicviolations.com
+  - +.cumshotsurprise.com
+  - +.freaksofcock.com
+  - +.disgraced18.com
+  - +.40ozbounce.com
+  - +.freaksofboobs.com
+  - +.jurassiccock.com
+  - +.ShadyPI.com
   # Nubiles Porn
   - +.nubiles-porn.com
   - +.stepsiblingscaught.com
@@ -104,6 +141,7 @@ payload:
   - +.sislovesme.com
   - +.familystrokes.com
   - +.pervmom.com
+  - +.dadcrush.com
   # Bang Bros Network
   - +.bangbros.com
   - +.miakhalifa.com
@@ -208,8 +246,6 @@ payload:
   - +.dancingbear.com
   # Dogfart Network
   - +.dogfartnetwork.com
-  # MamacitaZ
-  - +.mamacitaz.com
   # Futanari
   - +.futanari.xxx
   # Cam Soda
@@ -233,3 +269,50 @@ payload:
   - +.camsoda.com
   # Jav HD
   - +.JavHD.com
+  # pubacash
+  - +.puba.com
+  # spizcash
+  - +.mrluckypov.com
+  - +.spizoo.com
+  - +.creamher.com
+  - +.mrluckyraw.com
+  - +.firstclasspov.com
+  - +.vlogxxx.com
+  - +.mrluckyvip.com
+  - +.rawattack.com
+  - +.mrluckylife.com
+  - +.drdaddypov.com
+  - +.gothgirlfriends.com
+  - +.tagteampov.com
+  # Adult Mobile
+  - +.milehighmedia.com
+  - +.familysinners.com
+  - +.sweetsinner.com
+  - +.realityjunkies.com
+  - +.sweetheartvideo.com
+  - +.doghousedigital.com
+  # Love Her Films
+  - +.loveherfilms.com
+  - +.shelovesblack.com
+  - +.loveherboobs.com
+  - +.loveherfeet.com
+  # PervCity
+  - +.pervcity.com
+  - +.dpdiva.com
+  # ATKINGDOM
+  - +.atkingdom.com
+  - +.atkgirlfriends.com
+  - +.atkhairy.com
+  - +.amkingdom.com
+  - +.atkexotics.com
+  - +.atkpetites.com
+  - +.atkpremium.com
+  # EvilAngel
+  - +.evilangel.com
+  - +.analtrixxx.com
+  - +.tsfactor.com
+  - +.transgressivexxx.com
+  - +.pansexualx.com
+  - +.latexplaytime.com
+  - +.transsexualangel.com
+  - +.transsexualroadtrip.com
