--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -25,6 +25,7 @@ payload:
   - +.twistys.com
   - +.mofos.com
   # 未分类
+  - +.transangels.com
   - +.filthykings.com
   - +.jayspov.net
   - +.mamacitaz.com
@@ -49,11 +50,13 @@ payload:
   - +.fakehub.com
   - +.faketaxi.com
   - +.fakehostel.com
-  - +.FakeDrivingSchool.com
-  - +.FemaleFakeTaxi.com
+  - +.fakedrivingschool.com
+  - +.femalefaketaxi.com
+  - +.FakehubOriginals.com
+  - +.Czech.xxx
   # Wow Girls
   - +.wowgirls.com
-  - +.UltraFilms.com
+  - +.ultrafilms.com
   #  hushmoney
   - +.interracialpass.com
   - +.hushpass
@@ -93,7 +96,7 @@ payload:
   - +.40ozbounce.com
   - +.freaksofboobs.com
   - +.jurassiccock.com
-  - +.ShadyPI.com
+  - +.shadypi.com
   # Nubiles Porn
   - +.nubiles-porn.com
   - +.stepsiblingscaught.com
@@ -145,36 +148,36 @@ payload:
   # Bang Bros Network
   - +.bangbros.com
   - +.miakhalifa.com
-  - +.BangBus.com
-  - +.MomIsHorny.com
-  - +.MyDirtyMaid.com
-  - +.BangPov.com
-  - +.AssParade.com
-  - +.MonstersOfCock.com
-  - +.BigTitsRoundAsses.com
-  - +.PublicBang.com
-  - +.BrownBunnies.com
-  - +.BangBrosClips.com
-  - +.BangBros18.com
-  - +.BigTitsCreampie.com
-  - +.FuckTeam5.com
-  - +.BackroomFacials.com
-  - +.BigMouthfuls.com
-  - +.PartyOf3.com
-  - +.BackroomMilf.com
-  - +.TugJobs.com
-  - +.Pawg.com
-  - +.StepmomVideos.com
-  - +.MrAnal.com
-  - +.PornStarSpa.com
-  - +.MilfSoup.com
-  - +.DormInvasion.com
-  - +.FacialFest.com
-  - +.MagicalFeet.com
-  - +.LatinaRampage.com
-  - +.CanHeScore.com
-  - +.MyLifeInBrazil.com
-  - +.BlowjobNinjas.com
+  - +.bangbus.com
+  - +.momishorny.com
+  - +.mydirtymaid.com
+  - +.bangpov.com
+  - +.assparade.com
+  - +.monstersofcock.com
+  - +.bigtitsroundasses.com
+  - +.publicbang.com
+  - +.brownbunnies.com
+  - +.bangbrosclips.com
+  - +.bangbros18.com
+  - +.bigtitscreampie.com
+  - +.fuckteam5.com
+  - +.backroomfacials.com
+  - +.bigmouthfuls.com
+  - +.partyof3.com
+  - +.backroommilf.com
+  - +.tugjobs.com
+  - +.pawg.com
+  - +.stepmomvideos.com
+  - +.mranal.com
+  - +.pornstarspa.com
+  - +.milfsoup.com
+  - +.dorminvasion.com
+  - +.facialfest.com
+  - +.magicalfeet.com
+  - +.latinarampage.com
+  - +.canhescore.com
+  - +.mylifeinbrazil.com
+  - +.blowjobninjas.com
   # Pornfidelity
   - +.pornfidelity.com
   - +.kellymadison.com
@@ -182,27 +185,46 @@ payload:
   - +.5kteens.com
   - +.teenfidelity.com
   # Gamma Entertainment
-  - +.puretaboo.com
   - +.adulttime.com
+  - +.transfixed.com
+  - +.mommysboy.com
+  - +.femboyish.com
+  - +.moderndaysins.com
+  - +.analtime.xxx
+  - +.getupclose.com
+  - +.oopsie.com
+  - +.accidentalgangbang.com
+  - +.upclosevr.com
+  - +.asmrfantasy.com
+  - +.3dgspot.com
+  - +.forbvr.com
+  - +.futasentaisquad.com
+  - +.hentaisexschool.com
+  - +.21sextury.com
+  - +.21naturals.com
+  - +.lustygrandmas.com
+  - +.21sextreme.com
+  - +.footsiebabes.com
+  - +.grandpasfuckteens.com
+  - +.puretaboo.com
   - +.lezbebad.com
   - +.adulttimeupclose.com
   - +.agentredgirl.com
   - +.mommysgirl.com
   - +.vivid.com
-  - +.futasentaisquad.com
   - +.fantasymassage.com
   - +.nurumassage.com
   - +.allgirlmassage.com
   - +.soapymassage.com
   - +.milkingtable.com
   - +.www.trickyspa.com
-  - +.oopsie.tube
-  - +.transfixed.com
   - +.girlsway.com
   - +.heteroflexible.com
-  - +.21sextury.com
   - +.truelesbian.com
-  - +.accidentalgangbang.com
+  - +.devilstgirls.com
+  - +.outofthefamily,com
+  - +.devilsfilm.com
+  - +.devilsgangbangs.com
   # ThePornGutter
   - +.porngutter.com
   - +.jeffsmodels.com
@@ -244,8 +266,6 @@ payload:
   - +.mydirtyhobby.com
   # Dancing Bear
   - +.dancingbear.com
-  # Dogfart Network
-  - +.dogfartnetwork.com
   # Futanari
   - +.futanari.xxx
   # Cam Soda
@@ -258,17 +278,15 @@ payload:
   - +.naughtyamerica.com
   - +.myfriendshotmom.com
   # My Pervy Family
-  - +.MyPervyFamily.com
+  - +.mypervyfamily.com
   # Futanari
   - +.futanari.xxx
   # HotGuysFuck
-  - +.HotGuysFuck.com
+  - +.hotguysfuck.com
   # Ersties
   - +.ersties.com
   # Cam Soda
   - +.camsoda.com
-  # Jav HD
-  - +.JavHD.com
   # pubacash
   - +.puba.com
   # spizcash
@@ -316,3 +334,32 @@ payload:
   - +.latexplaytime.com
   - +.transsexualangel.com
   - +.transsexualroadtrip.com
+  # hushmoney
+  - +.interracialpass.com
+  - +.hushpass.com
+  - +.whitezilla.com
+  - +.frathousefuckfest.com
+  - +.shotherfirst.com
+  - +.mymomsfuckingblackzilla.com
+  - +.daddysworstnightmare.com
+  - +.bubblebuttbonanza.com
+  # AmateurEURO
+  - +.amateureuro.com
+  - +.castingfrancais.com
+  - +.xxxomas.com
+  - +.scambistimaturi.com
+  - +.hausfrauficken.com
+  - +.sextapegermany.com
+  - +.lasfolladoras.com
+  - +.castingallaitaliana.com
+  - +.deutschlandreport.com
+  - +.reifeswinger.com
+  # DogfartNetwork
+  - +.dogfartnetwork.com
+  - +.cuckoldsessions.com
+  - +.dfxtra.com
+  - +.blacksonblondes.com
+  # NOMAD
+  - +.gangbangcreampie.com
+  - +.gloryholesecrets.com
+  - +.portagloryhole.com
