--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -25,11 +25,15 @@ payload:
   - +.twistys.com
   - +.mofos.com
   # 未分类
+  - +.Analized.com
+  - +.lustery.com
+  - +.transerotica.com
+  - +.lifeselector.com
+  - +.mmm100.com
   - +.transangels.com
   - +.filthykings.com
   - +.jayspov.net
   - +.mamacitaz.com
-  - +.fakings.com
   - +.mature.nl
   - +.mylf.com
   - +.inkasex.com
@@ -98,36 +102,13 @@ payload:
   - +.jurassiccock.com
   - +.shadypi.com
   # Nubiles Porn
-  - +.nubiles-porn.com
-  - +.stepsiblingscaught.com
-  - +.momsteachsex.com
   - +.badteenspunished.com
-  - +.princesscum.com
-  - +.nubilesunscripted.com
-  - +.nubiles-casting.com
   - +.nubiles.net
-  - +.petitehdporn.com
-  - +.driverxxx.com
-  - +.petiteballerinasfucked.com
-  - +.teacherfucksteens.com
   - +.bountyhunterporn.com
-  - +.daddyslilangel.com
-  - +.myfamilypies.com
   - +.detentiongirls.com
   - +.nubileset.com
-  - +.familyswap.xxx
-  - +.youngermommy.com
-  - +.cumswappingsis.com
   - +.smashed.xxx
   - +.cheatingsis.com
-  - +.caughtmycoach.com
-  - +.realitysis.com
-  # Nubile Films
-  - +.nubilefilms.com
-  - +.nfbusty.com
-  - +.hotcrazymess.com
-  - +.thatsitcomshow.com
-  - +.girlsonlyporn.com
   # SexyHub
   - +.sexyhub.com
   - +.danejones.com
@@ -145,7 +126,20 @@ payload:
   - +.familystrokes.com
   - +.pervmom.com
   - +.dadcrush.com
+  - +.freeuse.com
+  - +.swappz.com
+  - +.shoplyfter.com
+  - +.pervz.com
+  - +.freeusemilf.com
   # Bang Bros Network
+  - +.brandibelle.com
+  - +.filthyfamily.com
+  - +.virtualporn.com
+  - +.culioneros.com
+  - +.mygf.com
+  - +.sexselector.com
+  - +.collegerules.com
+  - +.dancingbear.com
   - +.bangbros.com
   - +.miakhalifa.com
   - +.bangbus.com
@@ -207,10 +201,8 @@ payload:
   - +.footsiebabes.com
   - +.grandpasfuckteens.com
   - +.puretaboo.com
-  - +.lezbebad.com
   - +.adulttimeupclose.com
   - +.agentredgirl.com
-  - +.mommysgirl.com
   - +.vivid.com
   - +.fantasymassage.com
   - +.nurumassage.com
@@ -218,13 +210,17 @@ payload:
   - +.soapymassage.com
   - +.milkingtable.com
   - +.www.trickyspa.com
-  - +.girlsway.com
   - +.heteroflexible.com
   - +.truelesbian.com
   - +.devilstgirls.com
   - +.outofthefamily,com
   - +.devilsfilm.com
   - +.devilsgangbangs.com
+  # # girlsway
+  - +.girlsway.com
+  - +.mommysgirl.com
+  - +.webyoung.com
+  - +.lezbebad.com
   # ThePornGutter
   - +.porngutter.com
   - +.jeffsmodels.com
@@ -264,21 +260,15 @@ payload:
   - +.dirtycosplay.com
   # mydirtyhobby
   - +.mydirtyhobby.com
-  # Dancing Bear
-  - +.dancingbear.com
   # Futanari
   - +.futanari.xxx
   # Cam Soda
   - +.camsoda.com
-  # Pepe Porn
-  - +.pepeporn.com
   # Property Sex
   - +.propertysex.com
   # Naughty America
   - +.naughtyamerica.com
   - +.myfriendshotmom.com
-  # My Pervy Family
-  - +.mypervyfamily.com
   # Futanari
   - +.futanari.xxx
   # HotGuysFuck
@@ -320,6 +310,7 @@ payload:
   # ATKINGDOM
   - +.atkingdom.com
   - +.atkgirlfriends.com
+  - +.atkgalleria.com
   - +.atkhairy.com
   - +.amkingdom.com
   - +.atkexotics.com
@@ -363,3 +354,91 @@ payload:
   - +.gangbangcreampie.com
   - +.gloryholesecrets.com
   - +.portagloryhole.com
+  # JulesJordan
+  - +.JulesJordan.com
+  - +.theassfactory.com
+  # Evolved Fights
+  - +.evolvedfights.com
+  - +.evolvedfightslez.com
+  - +.submissivex.com
+  # PervMilfsAndTeens
+  - +.pervmilfsnteens.com
+  - +.skankery.com
+  - +.titopia.net
+  # FAKingsOficial
+  - +.fakings.com
+  - +.pepeporn.com
+  # BriskMediaPro
+  - +.shaggingmoms.com
+  - +.eroticfemaledomination.com
+  - +.teasingangels.com
+  - +.lezpov.com
+  - +.facesittingbutts.com
+  # OfficialNubiles
+  - +.brattysis.com
+  - +.momsteachsex.com
+  - +.stepsiblingscaught.com
+  - +.myfamilypies.com
+  - +.nubilefilms.com
+  - +.princesscum.com
+  - +.nubiles-porn.com
+  - +.nfbusty.com
+  - +.cumswappingsis.com
+  - +.familyswap.xxx
+  - +.girlsonlyporn.com
+  - +.hotcrazymess.com
+  - +.caughtmycoach.com
+  - +.realitysis.com
+  - +.petitehdporn.com
+  - +.teacherfucksteens.com
+  - +.thatsitcomshow.com
+  - +.nubiles-casting.com
+  - +.petiteballerinasfucked.com
+  - +.youngermommy.com
+  - +.daddyslilangel.com
+  - +.badteensdisciplined
+  - +.anilos.com
+  - +.nubilesunscripted.com
+  - +.driverxxx.com
+  # VIP4K
+  - +.vip4k.com
+  - +.Hunt4K.com
+  - +.Daddy4K.com
+  - +.Mature4K.com
+  - +.cuck4k.com
+  - +.mommy4k.com
+  - +.tutor4k.com
+  - +.shame4k.com
+  - +.Loan4K.com
+  - +.Debt4K.com
+  - +.bride4k.com
+  - +.ignore4k.com
+  - +.Swap4K.com
+  - +.pie4k.com
+  - +.Old4K.com
+  - +.Stuck4K.com
+  - +.sis.porn
+  - +.Black4K.com
+  - +.Fist4K.com
+  - +.dyke4k.com
+  # DORCEL
+  - +.dorcelclub.com
+  - +.luxure.com
+  - +.pornochic.fr
+  - +.girls-at-work.com
+  - +.africa-xxx.com
+  - +.dorcelclassics.com
+  - +.xxx-vintage.com
+  - +.russian-institute.com
+  # modelmedia
+  - +.delphinefilms.com
+  - +.Jerkaoke.com
+  # FullPornNetwork
+  - +.cumdumpsterteens.com
+  - +.FullPornNetwork.com
+  - +.porkvendors.com
+  - +.DTFsluts.com
+  # ManipulativeMedia
+  - +.MyPervyFamily.com
+  - +.touchmywife.com
+  # romeroproducer
