--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -12,6 +12,7 @@ payload:
   - +.slayed.com
   - +.milfy.com
   - +.wifeysworld.com
+  - +.Wifey.com
   # Aylo
   - +.trafficjunky.com
   - +.pornhub.com
@@ -25,6 +26,13 @@ payload:
   - +.twistys.com
   - +.mofos.com
   # 未分类
+  - +.milfed.com
+  - +.enjoyx.com
+  - +.BangingBeauties.com
+  - +.rickysroom.com
+  - +.Bambulax.com
+  - +.milkyperu.com
+  - +.hookuphotshot.com
   - +.Analized.com
   - +.lustery.com
   - +.transerotica.com
@@ -33,19 +41,509 @@ payload:
   - +.transangels.com
   - +.filthykings.com
   - +.jayspov.net
-  - +.mamacitaz.com
   - +.mature.nl
   - +.mylf.com
   - +.inkasex.com
   - +.mymember.site
-  - +.auntjudysxxx.com
   - +.boxofporn.com
+  - +.baberotica.com
+  - +.nucosplay.com
+  - +.BaberoticaVR.com
+  - +.SuckMeVR.com
+  - +.Upox.com
+  - +.GenderXFilms.com
+  - +.OopsFamily.com
+  - +.Transsensual.com
+  - +.TheHabibShow.com
+  - +.xillimite.com
+  - +.babes.com
+  - +.badfamilypov.com
+  - +.TabooHeat.com
+  - +.stunning18.com
+  - +.spankmonster.com
+  - +.ltgmovies.com
+  - +.GirlsRimming.com
+  - +.porndudecasting.com
+  - +.czechsoles.com
+  - +.BlackMoneyErotica.com
+  - +.BiPhoria.com
+  - +.BAEB.com
+  - +.wifebucket.com
+  - +.xprimeuk.biz
+  - +.jaxslayher.com
+  - +.purgatoryx.com
+  - +.XES.PL
+  - +.andy-star-videos.com
+  - +.ArchAngelVideo.com
+  - +.realgirlsfuck.com
+  - +.PegasProductions.com
+  - +.TeenyTaboo.com
+  - +.HentaiPros.com
+  - +.BoundHeat.com
+  - +.exxxteens.com
+  - +.bananafever.com
+  # WHORNYFILMS
+  - +.evilerotic.com
+  - +.whornyfilms.com
+  # LukeRiggs
+  - +.lukespov.vip
+  - +.RiggsFilms.vip
+  # KENAIMEDIA
+  - +.AkalexRomero.com
+  - +.akalexromero.com
+  # VirtualRealPorn
+  - +.VirtualRealGay.com
+  - +.VirtualRealPorn.com
+  - +.VirtualRealTrans.com
+  - +.VirtualRealPassion.com
+  - +.VRLovethegame.com
+  # blackcatproduction
+  - +.sofiacuccixxx.com
+  # RealSexCash
+  - +.RealSexPass.com
+  - +.thegangbangclub.com
+  - +.OneManBanned.com
+  - +.bendovermovies.com
+  - +.ShesBoss.com
+  - +.roadtripsuk.com
+  - +.realcouples.co.uk
+  - +.britishsexfilms.com
+  - +.britishbukkake.com
+  - +.KimsAmateurs.com
+  - +.AmaPOV.com
+  - +.NaughtyNoughties.com
+  - +.BritishBukkakeBabes.com
+  - +.hardeurosex.com
+  - +.babesbanged.com
+  - +.EbonyAndBlack.com
+  - +.BangingPregnant.com
+  - +.AmateursLoveBigBlackCock.com
+  - +.Gilfadventures.com
+  - +.HottiesBanged.com
+  - +.amateurs-next-door.com
+  - +.AllThingsAmateur.com
+  - +.homemadewives.com
+  - +.CumSoakedFaces.com
+  - +.Exxxposers.com
+  - +.buyclips.xxx
+  - +.milf-mafia.com
+  # SuperHotFilms
+  - +.SukMyDick.com
+  - +.superhotfilms.com
+  - +.LisaRiveraXXX.com
+  - +.IGotAWhiteBitch.com
+  - +.SexyNinaRivera.com
+  - +.YungDumbSluts.com
+  # Ferr-Art
+  - +.Ferr-Art.com
+  - +.TooDiva.com
+  # MadhotX
+  - +.madmasseur.com
+  - +.madgloryholes.com
+  # PlumperPass
+  - +.BBWLand.com
+  - +.PlumperPass.com
+  # Assylum4k
+  - +.assylum.com
+  - +.domthenation.com
+  # ImmoralProductions
+  - +.ImmoralFamily.com
+  - +.allgroupsex.com
+  - +.immorallive.com
+  - +.squirtingfun.com
+  - +.fuckafan.com
+  - +.immoralpov.com
+  # VIPMembers
+  - +.MariskaX.com
+  - +.Lady-Sonia.com
+  - +.Red-XXX.com
+  - +.PissingHD.com
+  - +.PissWhoreTraining.com
+  - +.BrookelynneBriar.com
+  - +.BangingWhitey.com
+  - +.BiohazardBitches.com
+  - +.SmokingMina.com
+  - +.PregnantKristi.com
+  - +.Crygasm.com
+  - +.GoldenPassions.com
+  - +.DiaperSluts.com
+  - +.CumHogs.com
+  - +.GlamourSmokers.com
+  - +.MontrealDream.com
+  - +.BiohazardUncensored.com
+  - +.XXXMina.com
+  - +.MinnieStClaire.com
+  - +.Embrianna.com
+  # ShakeTheSnake
+  - +.ShakeTheSnake.com
+  - +.bangingfamily.com
+  - +.freshandinnocent.com
+  - +.gotmum.com
+  - +.3-WayPorn.com
+  - +.StraightInTheAss.com
+  - +.InkedGurlz.com
+  - +.lezziebff.com
+  - +.BlowMePOV.com
+  - +.LetsFuckOutside.com
+  - +.HardcoreMassage.com
+  # KingsofFetish
+  - +.KingsOfFetish.com
+  # nookies
+  - +.ShadySpa.com
+  - +.nookies.com
+  - +.breedme.com
+  - +.FinishHim.com
+  - +.GilfAF.com
+  - +.MilfAF.com
+  - +.Over40Handjobs.com
+  - +.mylked.com
+  - +.ClubTug.com
+  - +.SeeMomSuck.com
+  - +.Petite18.com
+  - +.jawbreakerz.com
+  - +.TeasePOV.com
+  - +.TeenTugs.com
+  - +.CumBlastCity.com
+  - +.edgequeens.com
+  - +.FamilyLust.com
+  - +.MeanMassages.com
+  - +.shereacts.com
+  - +.EbonyTugs.com
+  # CathyCash
+  - +.CreampieCathy.com
+  - +.cathydoesblacks.com
+  # Pooksi
+  - +.TwinQs.com
+  - +.pooksi.com
+  - +.gilfmilf.com
+  # bratperversions
+  - +.BratPerversions.com
+  - +.GirlFriendsFeet.com
+  # BrandNewAmateurs
+  - +.FootJobVirgin.com
+  - +.brandnewamateurs.com
+  # NetVideoGirls
+  - +.netvideogirls.com
+  - +.castingcouch-hd.com
+  - +.NetGirl.com
+  # DirtyCinema
+  - +.rawwhitemeat.com
+  - +.peterskingdom.com
+  - +.slutsaroundtown.com
+  - +.mypovfam.com
+  - +.passionsonly.com
+  - +.pervertedpov.com
+  - +.MiLFUCKD.com
+  # FGRevenue
+  - +.downforbbc.com
+  - +.rymjob.com
+  - +.licensedtoblow.com
+  - +.licensedtolick.com
+  - +.CatalinaCruz.com
+  - +.fantasygirlpass.com
+  - +.paigeashley.com
+  - +.jasmineblackvideos.com
+  - +.cindybehr.com
+  - +.EvaAngelinavideos.com
+  - +.fantasygirlcarmella.com
+  - +.siennawest.com
+  - +.clubaustinkincaid.com
+  - +.valerysummervideos.com
+  - +.fantasygirlbrooke.com
+  - +.FantasyGirlTrina.com
+  # deluxecoin
+  - +.firstanalquest.com
+  - +.doubleviewcasting.com
+  - +.fuckndrive.com
+  # DreamGirlsNetwork
+  - +.monstersofjizz.com
+  - +.dreamgirlsmembers.com
+  # ZeroToleranceFilms
+  - +.ZeroToleranceFilms.com
+  - +.diabolic.com
+  - +.3rddegreefilms.com
+  # hgvideo
+  - +.homegrownvideo.com
+  - +.homegrownbigtits.com
+  - +.homegrownbigcock.com
+  - +.homegrowncreampies.com
+  - +.homegrownwives.com
+  - +.homegrownanalsex.com
+  - +.homegrownoutdoorsex.com
+  - +.homegrowngfs.com
+  - +.homegrownhairybush.com
+  # VIPSEXVAULT
+  - +.vipsexvault.com
+  - +.fuckedintraffic.com
+  - +.porndoepedia.com
+  - +.pinupsex.com
+  - +.losconsoladores.com
+  - +.exposedcasting.com
+  # THAI_WHORES
+  - +.mongerinasia.com
+  - +.CreampieThais.com
+  - +.ThaiGirlsWild.com
+  - +.ThaiPussyMassage.com
+  - +.CreampieInAsia.com
+  - +.GoGoBarAuditions.com
+  - +.TiTTiPORN.com
+  - +.AsianSuckDolls.com
+  - +.SubmitYourThai.com
+  - +.Thainee.com
+  # Blowpass
+  - +.throated.com
+  - +.mommyblowsbest.com
+  - +.onlyteenblowjobs.com
+  - +.BlowPass.com
+  - +.1000facials.com
+  # vrbangers
+  - +.VRBangersGay.com
+  - +.vrbangers.com
+  - +.vrconk.com
+  - +.VRBTrans.com
+  # WankItNow
+  - +.WankItNow.com
+  - +.upskirtjerk.com
+  - +.downblousejerk.com
+  - +.boppingbabes.com
+  - +.WankItNow.com
+  - +.zexyvr.com
+  # FetishHits
+  - +.AllPornSitesPass.com
+  - +.BBWHunter.com
+  - +.CheerleadersHardcore.com
+  - +.AsianSexQueens.com
+  - +.ClinicFuck.com
+  - +.EbonyBBWPorno.com
+  - +.NewCocksForMyWife.com
+  - +.HDHardcore.com
+  - +.AnalFuckVideo.com
+  - +.SinfulBBW.com
+  - +.MilfsBang.com
+  - +.BBWSexVideos.com
+  - +.BigBreastsSex.com
+  - +.MilfsWildHoliday.com
+  - +.RealSexWorld.com
+  - +.FuckMature.com
+  - +.BigCocksSex.com
+  - +.HardcoreFatties.com
+  - +.EbonyAssPorno.com
+  - +.AsianSexThrills.com
+  - +.IndianPornQueens.com
+  - +.BigTitQueens.com
+  - +.LatinasHeat.com
+  - +.GangbangedBabes.com
+  - +.PhatSexyAss.com
+  # ARLpass
+  - +.PascalsSubSluts.com
+  - +.SexyMomma.com
+  - +.laceystarr.com
+  - +.lukehardyxxx.com
+  - +.SaharaKniteXXX.com
+  - +.EdPowers.com
+  - +.BruceSevenFilms.com
+  - +.GrannyLovesBlack.com
+  - +.latexpussycats.com
+  - +.3AM.xxx
+  # BaDoink
+  - +.BaDoinkVR.com
+  - +.VRCosplayX.com
+  - +.18VR.com
+  - +.BabeVR.com
+  - +.BannedStories.com
+  - +.18Yoga.com
+  - +.xposure.tv
+  # SlutInspection
+  - +.SluttyBBWS.com
+  - +.slutinspection.com
+  # private
+  - +.private.com
+  - +.privateblack.com
+  - +.PrivateClassics.com
+  - +.PrivateCastings.com
+  # ExtremeMovieCash
+  - +.onlytaboo.com
+  - +.extrememoviepass.com
+  - +.sexflexvideo.com
+  - +.fuckonstreet.com
+  - +.sexycuckold.com
+  - +.whoresinpublic.com
+  - +.PervertClips.com
+  - +.cumrotic.com
+  - +.BangMyBoobies.com
+  - +.FuckThoseMoms.com
+  - +.FuckThoseChicks.com
+  - +.AllThoseGirls.com
+  - +.AllThoseBoobs.com
+  - +.VirtualXPorn.com
+  - +.povmovies.com
+  - +.RealGangBangs.com
+  - +.grannyguide.com
+  - +.GoldwinPass.com
+  - +.Bizarix.com
+  - +.WildGangBangs.com
+  - +.PreggoLovers.com
+  - +.LederhosenGangbang.com
+  - +.RealityTaboo.com
+  - +.SafariSex.com
+  - +.MilfPower.com
+  - +.AllThoseMoms.com
+  - +.crazypregnant.com
+  - +.analfrench.com
+  - +.RealPorn.xxx
+  - +.IndianRealPorn.com
+  - +.hotpartysex.com
+  - +.DPOrgasm.com
+  - +.grandpalove.com
+  - +.GermanStreets.com
+  - +.FrenchPickups.com
+  - +.GermanPickups.com
+  - +.dirtyprivate.com
+  - +.schoolgirllust.com
+  - +.SapphicLovers.com
+  - +.brasilextreme.com
+  - +.SexFair.xxx
+  - +.bosslesson.com
+  - +.latinlesbea.com
+  - +.dirtyclinic.com
+  - +.allthosegirlfriends.com
+  # SouthBayVideos
+  - +.japanlust.com
+  - +.TransRoommates.com
+  - +.CuckHunter.com
+  - +.WonderShemale.com
+  - +.povmasters.com
+  - +.joibabes.com
+  - +.LesWorship.com
+  # tandastudios
+  - +.Chickpass.com
+  # Fit18com
+  - +.Fit18.com
+  - +.thicc18.com
+  # AllureKing
+  - +.amateurallure.com
+  - +.swallowsalon.com
+  # Karups
+  - +.BoyFun.com
+  - +.jawked.com
+  - +.BoyFun.com
+  - +.KarupsOlderWomen.com
+  - +.KarupsHometownAmateurs.com
+  - +.KarupsPrivateCollection.com
+  - +.karups.com
+  - +.KarupsPOV
+  # Made In France
+  # TinArtX
+  # Yummysofie
+  - +.SofieMarieXXX.com
+  - +.texaspattiusa.com
+  # MamacitaZ
+  - +.MamacitaZ.com
+  - +.carnedelmercado.com
+  - +.ChicasLoca.com
+  - +.operacionlimpieza.com
+  - +.herbigass.com
+  # itsPOV
+  - +.itspov.com
+  - +.morepov.com
+  - +.FeetishPOV.com
+  - +.IntimatePOV.com
+  - +.ilovepov.com
+  - +.petitepov.com
+  - +.backdoorpov.com
+  - +.officepov.com
+  - +.academyPOV.com
+  - +.StepPOV.com
+  # CherryPimps
+  - +.CherryPimps.com
+  - +.WildOnCam.com
+  - +.Cucked.XXX
+  - +.Petite.XXX
+  - +.DrilledXXX,com
+  - +.Confessions.XXX
+  # ladyboygold
+  - +.ladyboygold.com
+  - +.TSRaw.com
+  - +.ladyboysfuckedbareback.com
+  - +.ladyboypussy.com
+  # metrovideos
+  - +.FamilyHookups.com
+  - +.SheWillCheat.com
+  - +.KinkySpa.com
+  - +.DeviantHardcore.com
+  - +.GirlGrind.com
+  # bamvisions
+  - +.BamVisions.com
+  # sheseducedme
+  - +.lesbiansexuality.com
+  - +.SheSeducedMe.com
+  # auntjudy
+  - +.auntjudysxxx.com
+  - +.auntjudys.com
+  # GirlfriendsFilms
+  - +.BSKOW.com
+  - +.GirlfriendsFilms.com
+  # Bang.com
+  - +.BangGonzo.com
+  - +.Rammed.com
+  - +.YNGR.com
+  - +.Bang.com
+  - +.prettyandraw.com
+  - +.roadsidexxx.com
+  - +.trickery.com
+  - +.BangConfessions.com
+  - +.Glamkore.com
+  - +.tour.bang.com
+  - +.FCKNews.com
+  - +.ScrewTheCops.com
+  # LethalHardcore
+  - +.LethalHardcoreVR.com
+  - +.lethalhardcore.com
+  # PornstarPlatinum
+  - +.pornstarplatinum.com
+  - +.alurajensonxxx.com
+  - +.AriellaFerrera.com
+  - +.EvaNotty.com
+  - +.avadevine.com
+  - +.JoslynJames.xxx
+  - +.BrookeWylde.com
+  - +.angelinavalentine.com
+  - +.rachaelcavalli.xxx
+  - +.ChristieStevensxxx.com
+  - +.gigiriveraxxx.com
+  - +.CourtneyTaylor.xxx
+  - +.clubveronicaavluv.com
+  - +.EricaLaurenXXX.com
+  - +.WhoreTodayGoneTomorrow.com
+  # MetArt
+  - +.SexArt.com
+  - +.metartx.com
+  - +.vivthomas.com
+  - +.straplez.com
+  - +.thelifeerotic.com
+  - +.alsscan.com
+  # scorepass
+  - +.Scoreland.com
+  - +.50plusmilfs.com
+  - +.40somethingmag.com
+  - +.60plusmilfs.com
+  - +.XLGirls.com
+  - +.18eighteen.com
+  - +.naughtymag.com
+  - +.chicksonblackdicks.com
+  - +.milfbundle.com
+  - +.bootyliciousmag.com
+  - +.hairycoochies.com
+  - +.bigboobbundle.com
+  - +.latinacoochies.com
+  - +.legsex.com
+  - +.analqts.com
+  - +.EbonyThots.com
+  - +.scoreclassics.com
   # Public Agent
   - +.publicagent.com
   # Family Strokes
   - +.familystrokes.com
-  # EnjoyX
-  - +.enjoyx.com
   # Bratty Sis
   - +.brattyseries.com
   # BellesaPlus
@@ -116,10 +614,13 @@ payload:
   - +.momxxx.com
   - +.massagerooms.com
   - +.fitnessrooms.com
-  # New Sensations
-  - +.newsensations.com
+  # NewSensations
   - +.familyxxx.com
-  - +.hotwifexxx.com
+  - +.newsensations.com
+  - +.HotWifeXXX.com
+  - +.GirlGirlXXX.com
+  - +.TheLesbianExperience.com
+  - +.ShaneDieselXXX.com
   # TeamSkeet
   - +.teamskeet.com
   - +.sislovesme.com
@@ -243,25 +744,28 @@ payload:
   - +.momsboytoy.com
   - +.imnotyourmommy.com
   # LetsDoeIt
-  - +.letsdoeit.com
-  - +.thewhiteboxxx.com
-  - +.herlimit.com
-  - +.agirlknows.com
-  - +.hornyhostel.com
+  - +.HerLimit.com
+  - +.TheWhiteBoxxx.com
+  - +.HornyHostel.com
+  - +.AGirlKnows.com
+  - +.latinamilf.com
+  - +.ScamAngels.com
+  - +.kinkyinlaws.com
+  - +.XChimera.com
+  - +.BitchesAbroad.com
   - +.relaxxxed.com
-  - +.xxxshades.com
-  - +.doegirls.com
+  - +.BumsBus.com
+  - +.XXXShades.com
+  - +.bumsbuero.com
+  - +.bumsbesuch.com
   - +.questfororgasm.com
   - +.mynaughtyalbum.com
-  - +.latinamilf.com
-  - +.bumsbuero.com
+  - +.letsdoeit.com
+  - +.doegirls.com
   - +.doeprojects.com
-  - +.bumsbesuch.com
   - +.dirtycosplay.com
   # mydirtyhobby
   - +.mydirtyhobby.com
-  # Futanari
-  - +.futanari.xxx
   # Cam Soda
   - +.camsoda.com
   # Property Sex
@@ -269,16 +773,18 @@ payload:
   # Naughty America
   - +.naughtyamerica.com
   - +.myfriendshotmom.com
-  # Futanari
-  - +.futanari.xxx
+  - +.tonightsgirlfriend.com
   # HotGuysFuck
   - +.hotguysfuck.com
   # Ersties
+  - +.Ersties.com
   - +.ersties.com
+  - +.ersties.tv
   # Cam Soda
   - +.camsoda.com
   # pubacash
   - +.puba.com
+  # CeaserProductions
   # spizcash
   - +.mrluckypov.com
   - +.spizoo.com
@@ -292,6 +798,12 @@ payload:
   - +.drdaddypov.com
   - +.gothgirlfriends.com
   - +.tagteampov.com
+  - +.TheStripperExperience.com
+  - +.JessicaJaymes.com
+  - +.RealSensual.com
+  - +.IntimateLesbians.com
+  - +.PornGoesPro.com
+  - +.PornstarTease.com
   # Adult Mobile
   - +.milehighmedia.com
   - +.familysinners.com
@@ -357,7 +869,7 @@ payload:
   # JulesJordan
   - +.JulesJordan.com
   - +.theassfactory.com
-  # Evolved Fights
+  # EvolvedFights
   - +.evolvedfights.com
   - +.evolvedfightslez.com
   - +.submissivex.com
@@ -442,3 +954,95 @@ payload:
   - +.MyPervyFamily.com
   - +.touchmywife.com
   # romeroproducer
+  - +.futanari.xxx
+  - +.freeze.xxx
+  - +.Hentaied.com
+  - +.parasited.com
+  - +.defeatedsexfight.com
+  - +.SmokingHawt.com
+  - +.cumflation.com
+  - +.Vored.com
+  - +.Tickling.com
+  - +.hentai.movie
+  - +.footfetish.center
+  - +.defeated.xxx
+  # PervMilfsAndTeens
+  - +.pervmilfsnteens.com
+  - +.Skankery.com
+  - +.Titopia.net
+  # XEmpire
+  - +.hardx.com
+  - +.LesbianX.com
+  - +.AllBlackX.com
+  - +.eroticax.com
+  - +.DarkX.com
+  - +.XEmpire.com
+  - +.sunnyleone.com
+  - +.ashleyfires.com
+  - +.openlife.com
+  # TeenMegaWorld
+  - +.TeenMegaWorld.com
+  - +.CreampieAngels.com
+  - +.BeautyAngels.com
+  - +.OhMyHoles.com
+  - +.FirstBGG.com
+  - +.FuckStudies.com
+  - +.XAngels.com
+  - +.TMWVRNet.com
+  - +.old-n-young.com
+  - +.tmwpov.com
+  - +.Anal-Beauty.com
+  - +.Beauty4k.com
+  - +.TrickyMasseur.com
+  - +.AnalAngels.com
+  - +.rawcouples.com
+  - +.NoBoring.com
+  - +.SquirtingVirgin.com
+  - +.dirty-doctor.com
+  - +.dirty-coach.com
+  - +.Vogov.com
+  # phenixcash
+  - +.slim4k.com
+  - +.MyTinyWish.com
+  - +.mydirtynovels.com
+  - +.xfeeds.net
+  - +.docsquirt.com
+  - +.dudcast.com
+  # Grooby
+  - +.GroobyGirls.com
+  - +.TGirls.XXX
+  - +.BlackT-Girls.com
+  - +.Femout.xxx
+  - +.Brazilian-Transsexuals.com
+  - +.BobsTGirls.com
+  - +.groobyvr.com
+  - +.TGirlJapan.com
+  - +.Franks-TGirlWorld.com
+  - +.LadyboyLadyboy.com
+  - +.TGirls.Porn
+  - +.tgirlpostop.com
+  - +.tgirlbbw.com
+  - +.RussianTGirls.com
+  - +.Canada-TGirls.com
+  - +.ShemalePornstar.com
+  - +.Shemale.Porn
+  - +.Ladyboy.XXX
+  - +.TSCastingCouch.com
+  - +.AsianAmericanGirls.com
+  # mytinydick
+  - +.MyTinyDick.com
+  - +.LostBetsGames.com
+  # swallowed
+  - +.Swallowed.com
+  - +.nympho.com
+  - +.TrueAnal.com
+  - +.allanal.com
+  - +.analonly.com
+  # AdultMobile
+  - +.AdultMobile.com
+  - +.FamilySinners.com
+  - +.sweetsinner.com
+  - +.sweetheartvideo.com
+  - +.realityjunkies.com
+  - +.doghousedigital.com
+  - +.milehighmedia.com
