--- a/list/fast.yaml
+++ b/list/fast.yaml
@@ -6,6 +6,7 @@ payload:
   - +.googleapis.com
   - +.twitter.com
   - +.x.com
+  - +.instagram
   - +.instagram.com
   - +.facebook.com
   - +.wikihow.com
