--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -615,6 +615,7 @@ payload:
   - +.massagerooms.com
   - +.fitnessrooms.com
   # NewSensations
+  - +.jsdelivr.net
   - +.familyxxx.com
   - +.newsensations.com
   - +.HotWifeXXX.com
