--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,9 @@
 payload:
+  - +.thenude.com
+  - +.xtapes.to
+  - +.whoreshub.com
+  - +.171gifs-com
+  - +.fpo.xxx
   - +.eporner.com
   - +.project1content.com
   - +.634.tv
