--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,9 @@
 payload:
+  - +.porndoe.com
+  - +.xnxx.com
+  - +.thumbzilla.com
+  - +.youjizz.com
+  - +.xvideos.com
   - +.rk.com
   - +.thenude.com
   - +.xtapes.to
