--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,9 @@
 payload:
+  - +.tnaflix.com
+  - +.ixxx.com
+  - +.ukdevilz.com
+  - +.xhamster.com
+  - +.porntrex.com
   - +.porndoe.com
   - +.xnxx.com
   - +.thumbzilla.com
