--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,11 @@
 payload:
+  - +.pussyspace.com
+  - +.tiava.com
+  - +.gosexpod.com
+  - +.qoqh.com
+  - +.analvids.com
+  - +.megatube.xxx
+  - +.sex.com
   - +.faphouse.com
   - +.xfreehd.com
   - +.multstorage.com
