--- a/list/fast.yaml
+++ b/list/fast.yaml
@@ -1,4 +1,5 @@
 payload:
+  - +.steampowered.com
   - +.steamcommunity.com
   - +.emby.media
   - +.google.com
@@ -10,6 +11,7 @@ payload:
   - +.x.com
   - +.instagram
   - +.instagram.com
+  - +.cdninstagram.com
   - +.facebook.com
   - +.wikihow.com
   - +.wikipedia.org
