--- a/list/fast.yaml
+++ b/list/fast.yaml
@@ -9,6 +9,7 @@ payload:
   - +.googleapis.com
   - +.twitter.com
   - +.x.com
+  - +.fbcdn.net
   - +.instagram
   - +.instagram.com
   - +.cdninstagram.com
