--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,5 @@
 payload:
+  - +.brazzersnetwork.com
   - +.wowgirlsblog.com
   - +.pornzog.com
   - +.wowgirls.xxx
@@ -598,6 +599,7 @@ payload:
   # Porn Plus
   - +.tiny4k.com
   - +.pornplus.com
+  - +.plausible.pornplus.com
   - +.cum4k.com
   - +.girlcum.com
   - +.povd.com
