--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -37,6 +37,7 @@ payload:
   - +.project1content.com
   - +.634.tv
   # miss-av
+  - +.missav.ai
   - +.missav.ws
   # Vixen Media Group
   - +.vixen.com
