--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,8 @@
 payload:
+  - +.mylfcdn.net
+  - +.psmcdn.net
+  - +.convertexperiments.com
+  - +.clarity.ms
   - +.metrohd.com
   - +.brazzersnetwork.com
   - +.wowgirlsblog.com
