--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -58,6 +58,7 @@ payload:
   # Aylo
   - +.trafficjunky.com
   - +.pornhub.com
+  - +.pornhub.org
   - +.etahub.com
   - +.phncdn.com
   - +.brazzers.com
