--- a/list/Ai.yaml
+++ b/list/Ai.yaml
@@ -3,3 +3,67 @@ payload:
   - +.gemini.google.com
   - +.mtalk.google.com
   - +.googletagmanager.com
+  - servd-anthropic-website.b-cdn.net
+  - alkalicore-pa.clients6.google.com
+  - pplx-res.cloudinary.com
+  - alkalimakersuite-pa.clients6.google.com
+  - webchannel-alkalimakersuite-pa.clients6.google.com
+  - openaiapi-site.azureedge.net
+  - openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
+  - openaicomproductionae4b.blob.core.windows.net
+  - production-openaicom-storage.azureedge.net
+  - +.chat.com
+  - +.dify.ai
+  - +.jasper.ai
+  - +.coderabbit.ai
+  - +.chatgpt.com
+  - +.meta.ai
+  - +.mistral.ai
+  - +.openart.ai
+  - +.openrouter.ai
+  - +.anthropic.com
+  - +.claude.ai
+  - +.claudeusercontent.com
+  - +.groq.com
+  - +.hf.co
+  - +.huggingface.co
+  - +.perplexity.ai
+  - +.pplx.ai
+  - +.grok.com
+  - +.x.ai
+  - +.gemini.google
+  - +.deepmind.google
+  - +.jules.google
+  - +.deepmind.com
+  - +.notebooklm.google
+  - +.cursor.com
+  - +.clipdrop.co
+  - +.chutes.ai
+  - +.cursorapi.com
+  - +.cursor.sh
+  - +.generativeai.google
+  - +.cursor-cdn.com
+  - +.poecdn.net
+  - +.poe.com
+  - +.sora.com
+  - +.oaistatic.com
+  - +.oaiusercontent.com
+  - +.openai.com
+  - +.proactivebackend-pa.googleapis.com
+  - +.gemini.google.com
+  - +.jules.google.com
+  - +.generativelanguage.googleapis.com
+  - +.host.livekit.cloud
+  - +.notebooklm.google.com
+  - +.geller-pa.googleapis.com
+  - +.aistudio.google.com
+  - +.turn.livekit.cloud
+  - +.bard.google.com
+  - +.chatgpt.livekit.cloud
+  - +.makersuite.google.com
+  - +.coderabbit.gallery.vsassets.io
+  - +.gateway.ai.cloudflare.com
+  - +.openai.com.cdn.cloudflare.net
+  - o33249.ingest.sentry.io
+  - openaicom.imgix.net
+  - browser-intake-datadoghq.com
