--- a/list/fast.yaml
+++ b/list/fast.yaml
@@ -15,6 +15,7 @@ payload:
   - +.fbcdn.net
   - +.instagram
   - +.instagram.com
+  - +.linktr.ee
   - +.cdninstagram.com
   - +.facebook.com
   - +.wikihow.com
