--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,15 @@
 payload:
+  - +.missav.ws
+  - +.snaptrckr.fun
+  - +.myavlive.com
+  - +.rmhfrtnd.com
+  - +.tsyndicate.com
+  - +.mm18news.com
+  - +.avhd101.com
+  - +.netflav.com
+  - +.tvairavvip.top
+  - +.javxxx.me
+  - +.javrate.com
   - +.sexbjcam.com
   - +.mylfcdn.net
   - +.psmcdn.net
