--- a/list/xxxpic.yaml
+++ b/list/xxxpic.yaml
@@ -1,5 +1,10 @@
 payload:
   - +.goodreads.com
+  - +.javdb.com
+  - +.javdb
+  - +.jav321.com
+  - +.avsox.click
+  - +.onejav.com
   - +.javstore.net
   - +.blogjav.net
   - +.pornpics.com
