--- a/list/Preview.yaml
+++ b/list/Preview.yaml
@@ -1,4 +1,7 @@
 payload:
+  - +.javfilms.com
+  - +.amazonaws.com
+  - +.mediafw.com
   - +.cc3001.dmm.co.jp
   - +.javtrailers.com
   - +.prestige-av.com
