--- a/list/xxx.yaml
+++ b/list/xxx.yaml
@@ -1,4 +1,10 @@
 payload:
+  - +.tapioni.com
+  - +.coosync.com
+  - +.yoshiclub.xyz
+  - +.earmuffpostnasalrisotto.com
+  - +.astronautlividlyreformer.com
+  - +.vz-a59c6881-d86.b-cdn.net
   - +.7mmtv.sx
   - +.supjav.com
   - +.missav.ws
